--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,13 @@
 
 <body>
     <ion-app><!-- App Loading... --></ion-app>
+
+
+    <!-- The polyfills js is generated during the build process -->
+    <script src="build/polyfills.js"></script>
+
+    <!-- The bundle js is generated during the build process -->
+    <script src="build/main.js"></script>
 </body>
 
 </html>
