--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="#263238">-->
 
 
-  <title>AngularPwaSeed</title>
+  <title>KoiosAnalytics</title>
 
 </head>
 
