--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
 
-  <meta name="description" content="AngularPwaSeed">
+  <meta name="description" content="AngularPwakoios">
   <meta name="author" content="João Vitor Paes de Barros do Carmo">
   <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,AngularJS,Angular,Angular2,jQuery,CSS,HTML,RWD,Dashboard">
   <meta http-equiv="Content-Security-Policy" content="img-src data: *; default-src 'self' *; script-src  'self'  'unsafe-inline' 'unsafe-eval' *; style-src  'self' 'unsafe-inline' *">
